--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,7 @@
 <!--<app-mentormain></app-mentormain>-->
 <!--<app-chat></app-chat>-->
 <!--<app-appointment-form></app-appointment-form>-->
+<!--<app-register></app-register>-->
+<!--<app-counselor-register></app-counselor-register>-->
+<!--<app-psychologist-register></app-psychologist-register>-->
+<!--<app-anfitrion-register></app-anfitrion-register>-->
