--- a/src/app/components/loginmenu/loginmenu.component.html
+++ b/src/app/components/loginmenu/loginmenu.component.html
@@ -1,12 +1,12 @@
 
 <mat-tab-group>
   <mat-tab label="Student"> <app-studentlogin></app-studentlogin> </mat-tab>
-  <mat-tab label="Advisor"> <app-advisorlogin></app-advisorlogin> </mat-tab>
+  <mat-tab label="Anfitrion"> <app-advisorlogin></app-advisorlogin> </mat-tab>
   <mat-tab label="Counselor"> <app-counselorlogin></app-counselorlogin> </mat-tab>
-  <mat-tab label="Mentor"> <app-mentorlogin></app-mentorlogin> </mat-tab>
+  <!--<mat-tab label="Mentor"> <app-mentorlogin></app-mentorlogin> </mat-tab>-->
   <mat-tab label="Psychologist"><app-psychologistlogin></app-psychologistlogin></mat-tab>
-  <mat-tab label="Professor"> <app-professorlogin></app-professorlogin> </mat-tab>
-  <mat-tab label="Admin"> <app-adminlogin></app-adminlogin> </mat-tab>
+  <!--<mat-tab label="Professor"> <app-professorlogin></app-professorlogin> </mat-tab>-->
+  <!--<mat-tab label="Admin"> <app-adminlogin></app-adminlogin> </mat-tab>-->
 
 </mat-tab-group>
 
