--- a/src/app/components/logins/psychologistlogin/psychologistlogin.component.html
+++ b/src/app/components/logins/psychologistlogin/psychologistlogin.component.html
@@ -21,9 +21,12 @@
                                 <label>
                                         <input name="remember" type="checkbox" [(ngModel)]="user.remember"> Remember Me
                                 </label>
-                                <label class="pull-right">
-                                        <a href="#">Forgotten Password?</a>
-                                </label>
+                              <label class="pull-right">
+                              <a [routerLink]="['/psychologistRegister']">Register</a>
+                            </label>
+                              <!--<label class="pull-right">-->
+                                        <!--<a href="#">Forgotten Password?</a>-->
+                                <!--</label>-->
                             </div>
                             <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Sign in</button>
                         </form>
