--- a/src/app/components/schedule/calendar/calendar.component.html
+++ b/src/app/components/schedule/calendar/calendar.component.html
@@ -4,5 +4,5 @@
 <mbsc-eventcalendar [data]="labelDays" [options]="eventSettings"></mbsc-eventcalendar>
     <!--</div>-->
 <!--</mbsc-form>-->
-<app-task-form></app-task-form>
+<!--<app-task-form></app-task-form>-->
 
