--- a/src/app/components/schedule/daily-schedule/daily-schedule.component.html
+++ b/src/app/components/schedule/daily-schedule/daily-schedule.component.html
@@ -1,2 +1,2 @@
 <mbsc-eventcalendar [data]="events" [options]="eventSettings" #mbscList="mobiscroll"></mbsc-eventcalendar>
-<app-task-form></app-task-form>
+<!--<app-task-form></app-task-form>-->
