--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -29,7 +29,7 @@
     <div class="card-two">
       <header>
         <div class="avatar">
-          <img src="https://randomuser.me/api/portraits/women/21.jpg" alt="{{user.name}}" />
+          <img src="images/users/default-profile.png" alt="{{user.name}}" />
         </div>
       </header>
       <h3>{{user.name}} {{user.lastname}}</h3>
