--- a/src/app/components/registers/register/register.component.html
+++ b/src/app/components/registers/register/register.component.html
@@ -17,15 +17,15 @@
                             <label>Lastname</label>
                             <input type="text" class="form-control" placeholder="" [(ngModel)]="user.lastname" name="lastname">
                           </div>
-                          <!-- Username -->
-                          <div class="form-group">
-                            <label>Username</label>
-                            <input type="text" class="form-control" placeholder="" [(ngModel)]="user.username" name="username">
-                          </div>
                           <!-- Email -->
                           <div class="form-group">
                             <label>E-Mail</label>
                             <input type="text" class="form-control" placeholder="" [(ngModel)]="user.email" name="email">
+                          </div>
+                          <!-- Username -->
+                          <div class="form-group">
+                            <label>Username</label>
+                            <input type="text" class="form-control" placeholder="If left blank, email will be used as username" [(ngModel)]="user.username" name="username">
                           </div>
                           <!-- Password -->
                           <div class="form-group">
@@ -40,27 +40,27 @@
                           <!-- Faculty -->
                           <div class="form-group">
                             <label>Faculty</label>
-                            <mat-select [(ngModel)]="user.faculty_num" >
-                              <mat-option *ngFor="let f of faculty" value="f.num">{{f.name}}</mat-option>
+                            <mat-select [(ngModel)]="programs" name="faculty">
+                              <mat-option *ngFor="let f of faculty" [value]="f.programs">{{f.faculty_name}}</mat-option>
                             </mat-select>
                           </div>
                           <!-- Program -->
-                          <!--<div class="form-group">-->
-                            <!--<label>Program{{faculty.selected}}</label>-->
-                            <!--<mat-select [(ngModel)]="user.program_num">-->
-                              <!--<mat-option *ngFor="let p of faculty.selected" value="p.num">{{p.name}}</mat-option>-->
-                            <!--</mat-select>-->
-                          <!--</div>-->
+                          <div class="form-group">
+                            <label>Program</label>
+                            <mat-select [(ngModel)]="user.program_num" name="program">
+                              <mat-option *ngFor="let p of programs" [value]="p.program_num">{{p.program_name}}</mat-option>
+                            </mat-select>
+                          </div>
                           <!-- Student number -->
                           <div class="form-group">
                             <label>Student Number (optional)</label>
                             <input type="text" class="form-control" placeholder="no dash lines (eg. 802000000)" [(ngModel)]="user.student_num" name="student_num">
                           </div>
                           <!-- Phone number -->
-                          <div class="form-group">
-                            <label>Phone Number (optional)</label>
-                            <input type="text" class="form-control" placeholder="no dash lines (eg. 7871234567)" [(ngModel)]="user.phone_num" name="phone_num">
-                          </div>
+                          <!--<div class="form-group">-->
+                            <!--<label>Phone Number (optional)</label>-->
+                            <!--<input type="text" class="form-control" placeholder="no dash lines (eg. 7871234567)" [(ngModel)]="user.phone_num" name="phone_num">-->
+                          <!--</div>-->
                             <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>
                         </form>
                     </div>
