--- a/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
+++ b/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
@@ -24,12 +24,12 @@
       <!-- Right Aligned -->
       <ul class="navbar-nav my-lg-0">
         <!-- Messages -->
-        <li><app-messages-menu></app-messages-menu></li>
+        <!--<li><app-messages-menu></app-messages-menu></li>-->
         <!-- Notifications -->
-        <li><app-notifications></app-notifications></li>
+        <!--<li><app-notifications></app-notifications></li>-->
         <!-- Profile -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-muted  " href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}&nbsp;&nbsp;<img src="images/users/5.jpg" alt="user" class="profile-pic" /></a>
+          <a class="nav-link dropdown-toggle text-muted  " href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}&nbsp;&nbsp;<img src="images/users/default-profile.png" alt="user" class="profile-pic" /></a>
           <div class="dropdown-menu dropdown-menu-right animated zoomIn">
             <ul class="dropdown-user">
               <li><a [routerLink]="[ mainpath, { outlets: { content: 'profile' } }]"><i class="ti-user"></i> Profile</a></li>
