--- a/src/app/components/registers/register/register.component.html
+++ b/src/app/components/registers/register/register.component.html
@@ -57,10 +57,10 @@
                             <input type="text" class="form-control" placeholder="no dash lines (eg. 802000000)" [(ngModel)]="user.student_num" name="student_num">
                           </div>
                           <!-- Phone number -->
-                          <!--<div class="form-group">-->
-                            <!--<label>Phone Number (optional)</label>-->
-                            <!--<input type="text" class="form-control" placeholder="no dash lines (eg. 7871234567)" [(ngModel)]="user.phone_num" name="phone_num">-->
-                          <!--</div>-->
+                          <div class="form-group">
+                            <label>Phone Number (optional)</label>
+                            <input type="text" class="form-control" placeholder="no dash lines (eg. 7871234567)" [(ngModel)]="user.phone_num" name="phone_num">
+                          </div>
                             <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>
                         </form>
                     </div>
