--- a/src/app/components/studentPages/dashboard/dashboard.component.html
+++ b/src/app/components/studentPages/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
       <!-- Courses table -->
       <div class="col-sm-4">
         <h2>My Courses</h2>
-        <app-student-courses-table [courseSelectDisabled]="false"></app-student-courses-table>
+        <app-student-courses-table [courses]="courses" [courseSelectDisabled]="true"></app-student-courses-table>
       </div>
       <!-- Time management graph -->
       <div class="col-lg-8">
