fixed registration errors

--- a/src/app/components/logins/studentlogin/studentlogin.component.html
+++ b/src/app/components/logins/studentlogin/studentlogin.component.html
@@ -4,7 +4,7 @@
             <div class="col-lg-4">
                 <div class="login-content card">
                   <!-- Logo -->
-                  <img src="src/assets/logo-big.png" class="logo"/>
+                  <!--<img src="src/assets/logo-big.png" class="logo"/>-->
                     <div class="login-form">
                       <h4>Student Login</h4>
                       <!-- Error alert, appears if user tried to login with wrong credentials -->
