--- a/src/app/components/registers/course-selection/course-selection.component.html
+++ b/src/app/components/registers/course-selection/course-selection.component.html
@@ -5,7 +5,7 @@
                 <div class="registration-content card">
                     <div class="registration-form">
                       <h2 align="center">Course Selection</h2>
-                      <p>Enter the codification (eg. MATE3001) and section (eg. 010) of each course.</p>
+                      <p>Enter the codification (eg. MATE3001) and section (eg. 010) of each course. Enter all your courses before continuing to next page.</p>
                       <div class="table">
                         <app-erroralert></app-erroralert>
                         <!-- Courses list -->
