added time to task form

--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -10,4 +10,4 @@
   <mbsc-eventcalendar [data]="events" [options]="monthSettings"></mbsc-eventcalendar>
 </div>
 
-<!--<app-task-form></app-task-form>-->
+<app-task-form (taskEvent)="addTask($event)"></app-task-form>
