--- a/src/app/components/studentPages/task-form/form-modal.html
+++ b/src/app/components/studentPages/task-form/form-modal.html
@@ -1,22 +1,22 @@
 <div mat-dialog-content class="form-container">
   <h3 mat-dialog-title>New Task</h3>
   <ul>
-    <!-- Task type -->
-    <li>
+    <!-- Error alert -->
+    <app-erroralert></app-erroralert>
 
-      <app-erroralert></app-erroralert>
-
-      <mat-radio-group [(ngModel)]="data.type">Type:&nbsp;
+    <!-- Task type; only shown when opened in schedule component, not course page -->
+    <li *ngIf="!data.course">
+      <mat-radio-group [(ngModel)]="task.type">Type:&nbsp;
         <mat-radio-button [value]="0">Study</mat-radio-button>&nbsp;
         <mat-radio-button [value]="1">Personal</mat-radio-button>&nbsp;
       </mat-radio-group>
     </li>
 
-    <!-- Course, only shown if it is a study task -->
-    <li *ngIf="data.type == 0">
+    <!-- Course; only shown if it is a study task -->
+    <li *ngIf="task.type == 0">
       <!--Course:&nbsp;-->
       <mat-form-field class="form-field">
-        <mat-select placeholder="Course" [(ngModel)]="data.course">
+        <mat-select placeholder="Course" [(ngModel)]="task.course">
           <mat-option *ngFor="let course of courses" [value]="course.course_id">
             {{course.name}}
           </mat-option>
@@ -27,64 +27,54 @@
     <!-- Task title input -->
     <li>
       <mat-form-field class="form-field" appearance="outline">
-        <input matInput placeholder="Title" [(ngModel)]="data.title">
+        <input matInput placeholder="Title" [(ngModel)]="task.title">
       </mat-form-field>
     </li>
 
     <!-- Task description input -->
     <li>
       <mat-form-field class="form-field" appearance="outline">
-        <textarea matInput placeholder="Description" [(ngModel)]="data.description"></textarea>
+        <textarea matInput placeholder="Description" [(ngModel)]="task.description"></textarea>
       </mat-form-field>
     </li>
 
     <!-- Task starting date and time -->
     <li>
       <table class="form-field" cellspacing="0">
-        <tr>
-        <!--<div class="col-sm-4">-->
-          <td>
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput [matDatepicker]="start_picker" placeholder="Starts" [(ngModel)]="data.start" disabled>
-                <mat-datepicker-toggle matSuffix [for]="start_picker"></mat-datepicker-toggle>
-                <mat-datepicker #start_picker disabled="false"></mat-datepicker>
-            </mat-form-field>
-          </td>
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--&lt;!&ndash;<div class="col-sm-4">&ndash;&gt;-->
-          <td>
-            <!--<mat-form-field class="form-field" appearance="outline">-->
-              <!--<input matInput [matDatepicker]="start_picker" placeholder="Starts" [(ngModel)]="data.start" disabled>-->
-                <!--<mat-datepicker-toggle matSuffix [for]="start_picker"></mat-datepicker-toggle>-->
-                <!--<mat-datepicker #start_picker disabled="false"></mat-datepicker>-->
-            <!--</mat-form-field>-->
-            <!--<mat-form-field class="form-field" appearance="outline">-->
-              <!--<mbsc-time [(ngModel)]="data.start_time" [options]="desktopSettings">Desktop</mbsc-time>-->
-              <!--<input matInput placeholder="First name">-->
-            <!--</mat-form-field>-->
-          </td>
-
-        <!--</div>-->
-        </tr>
+        <tr></tr>
+        <td>
+          <mat-form-field class="form-field" appearance="outline">
+            <input matInput [max]="task.end" [matDatepicker]="start_picker" placeholder="Starts" [(ngModel)]="task.start" disabled>
+            <mat-datepicker-toggle matSuffix [for]="start_picker"></mat-datepicker-toggle>
+            <mat-datepicker #start_picker disabled="false"></mat-datepicker>
+          </mat-form-field>
+        </td>
+        <td>
+          <mat-form-field class="form-field" appearance="outline">
+            <input matInput [(ngModel)]="start_time" mbsc-time [mbsc-options]="timeSettings" placeholder="Start Time" />
+            <!--<mat-icon>access_time</mat-icon>-->
+          </mat-form-field>
+        </td>
       </table>
     </li>
 
-    <!--<table class="form-field" cellspacing="0"><tr>-->
-    <!--<td><mat-form-field class="form-field" appearance="outline">-->
-
-    <!--</mat-form-field></td>-->
-    <!--<td><mat-form-field class="form-field" appearance="outline">-->
-      <!--<input matInput placeholder="Long Last Name That Will Be Truncated">-->
-    <!--</mat-form-field></td>-->
-  <!--</tr></table>-->
-
     <!-- Task ending date and time -->
     <li>
-      <mat-form-field class="form-field" appearance="outline">
-        <input matInput [matDatepicker]="end_picker" placeholder="Ends" [(ngModel)]="data.end" disabled>
-          <mat-datepicker-toggle matSuffix [for]="end_picker"></mat-datepicker-toggle>
-          <mat-datepicker #end_picker disabled="false"></mat-datepicker>
-      </mat-form-field>
+      <table class="form-field" cellspacing="0">
+        <tr></tr>
+        <td>
+          <mat-form-field class="form-field" appearance="outline">
+            <input matInput [min]="task.start" [matDatepicker]="end_picker" placeholder="Ends" [(ngModel)]="task.end" disabled>
+            <mat-datepicker-toggle matSuffix [for]="end_picker"></mat-datepicker-toggle>
+            <mat-datepicker #end_picker disabled="false"></mat-datepicker>
+          </mat-form-field>
+        </td>
+        <td>
+          <mat-form-field class="form-field" appearance="outline">
+            <input matInput [(ngModel)]="end_time" mbsc-time [mbsc-options]="timeSettings" placeholder="End Time" />
+          </mat-form-field>
+        </td>
+      </table>
     </li>
   </ul>
 </div>
