--- a/src/app/components/studentPages/task-form/task-form.component.css
+++ b/src/app/components/studentPages/task-form/task-form.component.css
@@ -7,3 +7,16 @@
 .form-field {
   width: 100%;
 }
+
+table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+th, td {
+  overflow: hidden;
+  width: 200px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
