--- a/src/app/components/grade-gauge/grade-gauge.component.html
+++ b/src/app/components/grade-gauge/grade-gauge.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-4 offset-2" >
     <h5 class="center">Curent Grade</h5>
-    <h1 class="center" style="color: green;">{{grades.general}} %</h1>
+    <h1 class="center" style="color: green;">{{grades.general | number : '.2-2'}} %</h1>
     <!--<div id="gauge1" class="chart"></div>-->
   </div>
   <div class="col-sm-6">
